now they collapse correctly

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -35,7 +35,7 @@ button:hover {
 }
 
 .locked {
-    visibility: none;
+    display: none;
 }
 
 .hidden {
